log
Sun Mar 13 16:37:48 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
b7badc9
Sun Mar 13 16:42:23 UTC 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:42:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   *suma = sumaN(*(a+m), n);
                 ^
exercises.c:21:5: note: expected ‘int *’ but argument is of type ‘int’
 int sumaN(int a[], int N) {
     ^~~~~
exercises.c:40:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i;
       ^
cc1: all warnings being treated as errors
Compilation failed
ef58d0f
Sun Mar 13 19:01:22 UTC 2022: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   *suma = sumaN(*(a+m), n);
                 ^
exercises.c:21:5: note: expected ‘int *’ but argument is of type ‘int’
 int sumaN(int a[], int N) {
     ^~~~~
cc1: all warnings being treated as errors
Compilation failed
fbc320f
Sun Mar 13 19:02:47 UTC 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4f2e414
Sun Mar 13 19:05:15 UTC 2022: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:59:8: error: ‘i’ undeclared (first use in this function)
   for (i = 0; i<30; i++)
        ^
exercises.c:59:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:61:17: error: ‘a’ undeclared (first use in this function)
     scanf("%c", a[i]);
                 ^
exercises.c:69:15: error: ‘$edad’ undeclared (first use in this function); did you mean ‘edad’?
   scanf("%i", $edad);
               ^~~~~
               edad
Compilation failed
99a2482
Sun Mar 13 19:05:32 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:59:8: error: ‘i’ undeclared (first use in this function)
   for (i = 0; i<30; i++)
        ^
exercises.c:59:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:61:17: error: ‘a’ undeclared (first use in this function)
     scanf("%c", a[i]);
                 ^
Compilation failed
c8d5355
